@@ -1,3 +1,12 @@
+swftp (1.0.7.1)
+    * Graphite metrics for SFTP and FTP
+    * skip root user in SFTP
+    * ceph-compatible renaming (transform username -> username:username if colon not present)
+
+swftp (1.0.7)
+    * smtp interface
+    * rabbitmq connection
+
 swftp (1.0.6)
 
     * Adds Optional Stats Web Interface (JSON Output)
